# neuro-creative-optimizer

./: .env.example  .gitignore  README.md  agent.md  architecture.md  bootstrap.md  context.md  implementation.md  package.json  pnpm-lock.yaml  pyproject.toml  roadmap.md  scope.md  thesis.md
apps/web/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
artifacts/setup/: latest.json  smoke-input.txt  smoke-test.json
docs/pids/: PID-1.2-provider-gateway.md  PID-1.3-control-plane-api.md  PID-1.4-setup-status-and-artifacts.md  PID-1.5-tribe-bootstrap-adapter.md  PID-1.6-dev-workflow-and-test-contracts.md  PID-2.1-core-schemas.md  PID-2.2-ingestion-segmentation.md  PID-2.3-audience-modeling.md  PID-2.4-feature-pipeline.md  PID-2.5-scoring-engine.md  PID-2.6-analysis-orchestration-api.md  PID-2.7-analysis-report-contract.md  (+44 more)
scripts/: bootstrap.ps1  bootstrap.sh  smoke_test_tribe.py
tests/: test_agent_workflow_service.py  test_analysis_service.py  test_api.py  test_audience_service.py  test_audio_alignment_service.py  test_audio_analysis_service.py  test_audio_feature_service.py  test_brain_mesh_api.py  test_brain_mesh_service.py  test_commercial_decision_service.py  test_core_schemas.py  test_evaluation_metrics.py  test_evaluation_service.py  test_feature_service.py  test_ingestion_service.py  test_llm_variant_generation_service.py  test_optimization_report.py  test_optimization_service.py  test_prompt_policy.py  test_provider_registry.py  test_provider_service.py  test_revision_service.py  test_scoring_service.py  test_setup_status.py  test_tribe_adapter.py  test_tribe_analysis_service.py  test_tribe_api_honesty.py  test_variant_generation_service.py  test_workbench_service.py
(+16 files in other folders)
